[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenery/Bonfire/bonfire1.png" type="Texture" id=1]
[ext_resource path="res://Scenery/Bonfire/bonfire0.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Clean.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenery/Bonfire/Bonfire.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 83, 33 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Bonfire" type="Area2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Dialogue" type="Control" parent="."]
visible = false
margin_left = -36.0
margin_top = -73.0
margin_right = 4.0
margin_bottom = -33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Dialogue"]
margin_left = -44.0
margin_top = -53.0
margin_right = 119.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Dialogue/Panel"]
margin_left = 32.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )
text = "Fazer caf√© ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes_Button" type="Button" parent="Dialogue/Panel"]
margin_left = 57.0
margin_top = 36.0
margin_right = 109.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
text = "Sim !"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Bonfire_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bonfire_body_exited"]
[connection signal="pressed" from="Dialogue/Panel/Yes_Button" to="." method="_on_Yes_Button_pressed"]
